Improve chat history item colors, fix message align

--- a/client/src/css/colors.css
+++ b/client/src/css/colors.css
@@ -7,7 +7,7 @@
 
     --accent-color-dark: rgb(34, 75, 71);
     --accent-color-normal: rgb(34, 138, 124);
-    --accent-color-light: rgb(103, 252, 220);
+    --accent-color-light: rgb(51, 233, 193);
 
     --component-color-normal: hsl(0, 0%, 75%);
     --component-color-hover: hsl(0, 0%, 100%);
